# TradingBotInHaskell

./: 1YearHistoricalData10Min.csv  1YearHistoricalData1Min.csv  1YearHistoricalData5Min.csv  CHANGELOG.md  HASKELL-TRADER.cabal  HistoricalData.csv  HistoricalData1Min.csv  LICENSE  README.md  trades.csv
app/: Backtest.hi  Backtest.hs  Backtesting.hs  CsvReplay.hi  CsvReplay.hs  Main.hi  Main.hs  Strategies.hi  Strategies.hs  TUI.hs  fetchdata.hs  old.hs  trades.csv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
