cabal-version:      3.0

name:               HASKELL-TRADER
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             thefakeblue
maintainer:         122709556+thefakeblue@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable HASKELL-TRADER
    import:           warnings
    main-is:          Main.hs
    other-modules:    Backtest, Strategies, TUI
    build-depends:    base ^>=4.18.3.0, network, bytestring, time, containers, directory, layoutz
    hs-source-dirs:   app
    default-language: Haskell2010

executable fetch-data
    import:           warnings
    main-is:          fetchdata.hs
    other-modules:    Backtest, Strategies
    build-depends:    base ^>=4.18.3.0, network, bytestring, time, containers, directory
    hs-source-dirs:   app
    default-language: Haskell2010